# atlas

./: .gitignore  2505.03335v2.md  2505.23735v1.md  BUG_FIXES_SUMMARY.md  README.md  best_atlas_config.json  config.py  data_utils.py  debug_model.py  demo.py  demo_optimization.py  evaluate.py  extended_reasoner_training_data.jsonl  main.py  model.py  optimization_test_results.json  optimize.py  pyproject.toml  reasoner_training_data.jsonl  setup.py  test_dataloader.py  test_minimal.py  test_optimization.py  test_training.py  train.py
wandb/: latest-run
wandb/offline-run-20250717_120349-ijxddemh/: run-ijxddemh.wandb
wandb/offline-run-20250717_120349-ijxddemh/files/: requirements.txt
wandb/offline-run-20250717_120818-r5gx94br/: run-r5gx94br.wandb
wandb/offline-run-20250717_120846-7cyezpbd/: run-7cyezpbd.wandb
wandb/offline-run-20250717_120846-7cyezpbd/files/: requirements.txt
